Изменил DI контейнер на Autofac и реорганизовал проект.

--- a/Sources/BackgroundJob.Host/Settings.settings
+++ b/Sources/BackgroundJob.Host/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="NotificationFrom" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="EnableWcfEndpoint" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
