--- a/Sources/BackgroundJob.Host/App.config
+++ b/Sources/BackgroundJob.Host/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="BackgroundJob.Host.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="BackgroundJob.Jobs.JobsSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <section name="jobSettings" type="BackgroundJob.Configuration.JobConfigurations, BackgroundJob.Configuration" allowLocation="true" allowDefinition="Everywhere" />
     
@@ -33,28 +34,32 @@
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-  <connectionStrings>
-  </connectionStrings>
   <jobSettings>
     <jobs>
-      <job name="ExampleJob" type="BackgroundJob.Host.Example.TestRecurringJobEnqueuer" schedulingtime="0 * * * * ?" queuename=".\Private$\ExampleJob" />
+      <job name="TestRecurringJob" type="BackgroundJob.Host.Example.TestRecurringJobEnqueuer" schedulingtime="0 * * * * ?" maxreplay="3" />
+      <!--<job name="ContentsAvailabilityMonitoring" type="BackgroundJob.Jobs.ContentsAvailabilityMonitoring.ContentsAvailabilityMonitorEnqueuer, BackgroundJob.Jobs" schedulingtime="0 0 0 * * ?" maxreplay="3" />-->
     </jobs>
   </jobSettings>
   <applicationSettings>
     <BackgroundJob.Host.Settings>
       <setting name="NotificationSmtpHost" serializeAs="String">
-        <value>test</value>
+        <value>Test</value>
       </setting>
       <setting name="NotificationSmtpUser" serializeAs="String">
-        <value>test</value>
+        <value></value>
       </setting>
       <setting name="NotificationSmtpPassword" serializeAs="String">
-        <value>test</value>
+        <value></value>
       </setting>
       <setting name="NotificationFrom" serializeAs="String">
-        <value>test</value>
+        <value>noreply@test.ru</value>
+      </setting>
+      <setting name="EnableWcfEndpoint" serializeAs="String">
+        <value>False</value>
       </setting>
     </BackgroundJob.Host.Settings>
+    <BackgroundJob.Jobs.JobsSettings>
+    </BackgroundJob.Jobs.JobsSettings>
   </applicationSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -72,6 +77,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Practices.Unity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
