--- a/Sources/BackgroundJob.Jobs/BackgroundJob.Jobs.csproj
+++ b/Sources/BackgroundJob.Jobs/BackgroundJob.Jobs.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E540ACA-0468-4273-81AE-7CAED0945E1E}</ProjectGuid>
+    <ProjectGuid>{C502252F-B2BD-49B0-AEF3-7E60A16320BE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BackgroundJob.Configuration</RootNamespace>
-    <AssemblyName>BackgroundJob.Configuration</AssemblyName>
+    <RootNamespace>BackgroundJob.Jobs</RootNamespace>
+    <AssemblyName>BackgroundJob.Jobs</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -34,20 +34,56 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Monads, Version=1.1.5.0, Culture=neutral, PublicKeyToken=c45ad03d718dd7fa, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Monads.1.1.5.0\lib\net40\Monads.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NLog.4.0.1\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JobConfigurationHelper.cs" />
-    <Compile Include="JobConfigurations.cs" />
+    <Compile Include="ContentsAvailabilityMonitoring\BadContent.cs" />
+    <Compile Include="ContentsAvailabilityMonitoring\ContentsAvailabilityConfigurerAttribute.cs" />
+    <Compile Include="ContentsAvailabilityMonitoring\ContentsAvailabilityMonitorEnqueuer.cs" />
+    <Compile Include="ContentsAvailabilityMonitoring\IContentsAvailabilityMonitor.cs" />
+    <Compile Include="JobsSettings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>JobsSettings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\_DataModel\SmsSubscriptionDataModel\SmsSubscriptionDataModel.csproj">
+      <Project>{81E509F0-8DA4-48CB-B695-77B0E8296EF7}</Project>
+      <Name>SmsSubscriptionDataModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BackgroundJob.Core\BackgroundJob.Core.csproj">
       <Project>{2DBA42BF-739E-4D1A-BA93-B70183E9B62E}</Project>
       <Name>BackgroundJob.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="JobsSettings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>JobsSettings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
